@@ -1,3 +1,12 @@
+2008-05-08  Tambet Ingo  <tambet@gmail.com>
+
+	Implement asking GSM device PIN.
+
+	* src/utils/utils.c (vnd_ignore): Add some more strings to ignore.
+
+	* src/applet-device-gsm.c (pin_entry_changed)
+	(get_gsm_secrets_cb, gsm_get_secrets): Implement.
+
 2008-05-07  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-dialogs.c
